--- a/33-shopingCart/src/style.css
+++ b/33-shopingCart/src/style.css
@@ -70,13 +70,14 @@ a {
   display: flex;
   gap: 10px;
   font-size: 1.2rem;
+  border: 2px solid black;
+  background-color: black;
+  padding: .25rem .75rem;
+  border-radius: 5px;
+  color: white;
 }
-.bi-plus-lg {
-  color: green;
-}
-.bi-dash-lg {
-  color: red;
-}
+
+
 
 /* styles for cart.html page */
 .text-center {
